[package]
name = "cassandra_restore_structure"
version = "0.1.0"
authors = ["Emamul Andalib <emamul.andalib@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
regex = "1"
log = "0.4.8"
clap = "2.33.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
